--- a/preparation/3_predictions.ipynb
+++ b/preparation/3_predictions.ipynb
@@ -122,7 +122,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Musite Deep"
+    "## Musite Deep\n",
+    "\n",
+    "The value to be analyzed is **post-translational modification (PTM) score**"
    ]
   },
   {
@@ -238,10 +240,12 @@
     "musiteDeep_prediction_all_file_path = path.join(musite_results_base_path, \"Prediction_results_all.txt\")\n",
     "musiteDeep_prediction_all_scores_file_path = path.join(musite_results_base_path, \"Prediction_results_all_scores.txt\")\n",
     "musiteDeep_prediction_score_by_protein_file_path = path.join(musite_results_base_path, \"Prediction_results_score_by_protein.txt\")\n",
+    "musiteDeep_prediction_score_by_id_base_file_path = path.join(musite_results_base_path, \"Prediction_results_score_by_id_base.txt\")\n",
     "\n",
-    "\n",
-    "# TODO\n",
-    "# setar variables para lectura que sean .zip en lugar de txt"
+    "musiteDeep_prediction_all_zip_file_path = musiteDeep_prediction_all_file_path.replace(\".txt\", \".zip\")\n",
+    "musiteDeep_prediction_all_scores_zip_file_path = musiteDeep_prediction_all_scores_file_path.replace(\".txt\", \".zip\")\n",
+    "musiteDeep_prediction_score_by_protein_zip_file_path = musiteDeep_prediction_score_by_protein_file_path.replace(\".txt\", \".zip\")\n",
+    "musiteDeep_prediction_score_by_id_base_zip_file_path = musiteDeep_prediction_score_by_id_base_file_path.replace(\".txt\", \".zip\")"
    ]
   },
   {
@@ -279,43 +283,45 @@
     "\n",
     "for i in range(1, musiteDeep_prediction_files_count + 1):\n",
     "\n",
-    "    musiteDeep_prediction_file_path_n = musiteDeep_prediction_file_path.format(i)        \n",
+    "    musiteDeep_prediction_file_path_n = musiteDeep_prediction_file_path.format(i)                \n",
     "    \n",
-    "    f  = open(musiteDeep_prediction_file_path_n, 'r') \n",
-    "    \n",
-    "    for line in  f:\n",
-    "        if line[0] == '>' or line[0:2] == 'ID':    \n",
-    "            # do nothing\n",
-    "            #print(line)\n",
-    "            to_discard.append(line)\n",
-    "            j = 1\n",
-    "        else:\n",
-    "            parts = line.split('\\t')\n",
-    "            # print(parts)\n",
-    "            if len(parts) > 0:\n",
-    "                                \n",
-    "                protein_id = parts[0]\n",
-    "                \n",
-    "                protein_ids.append(protein_id)\n",
-    "                \n",
-    "                # column PTMscores\n",
-    "                prediction = parts[len(parts) - 2]\n",
-    "                \n",
-    "                prediction_parts = prediction.split(':')\n",
-    "                \n",
-    "                if len(prediction_parts) > 1:\n",
-    "                    \n",
-    "                    prediction_score = prediction_parts[1]\n",
-    "                    prediction_type =  prediction_parts[0]\n",
-    "                    score_item = ScoreItem(protein_id, prediction_type, prediction_score)                                                        \n",
-    "                    score_rows.append(score_item.get_row())\n",
-    "                    \n",
-    "                else:\n",
-    "                    print(prediction_parts)\n",
+    "    if(path.isfile(fasta_proteins_file_path)):\n",
+    "        \n",
+    "        f  = open(musiteDeep_prediction_file_path_n, 'r') \n",
+    "\n",
+    "        for line in  f:\n",
+    "            if line[0] == '>' or line[0:2] == 'ID':    \n",
+    "                # do nothing\n",
+    "                #print(line)\n",
+    "                to_discard.append(line)\n",
+    "                j = 1\n",
     "            else:\n",
-    "                print(parts)\n",
-    "    \n",
-    "    f.close()\n",
+    "                parts = line.split('\\t')\n",
+    "                # print(parts)\n",
+    "                if len(parts) > 0:\n",
+    "\n",
+    "                    protein_id = parts[0]\n",
+    "\n",
+    "                    protein_ids.append(protein_id)\n",
+    "\n",
+    "                    # column PTMscores\n",
+    "                    prediction = parts[len(parts) - 2]\n",
+    "\n",
+    "                    prediction_parts = prediction.split(':')\n",
+    "\n",
+    "                    if len(prediction_parts) > 1:\n",
+    "\n",
+    "                        prediction_score = prediction_parts[1]\n",
+    "                        prediction_type =  prediction_parts[0]\n",
+    "                        score_item = ScoreItem(protein_id, prediction_type, prediction_score)                                                        \n",
+    "                        score_rows.append(score_item.get_row())\n",
+    "\n",
+    "                    else:\n",
+    "                        print(prediction_parts)\n",
+    "                else:\n",
+    "                    print(parts)\n",
+    "\n",
+    "        f.close()\n",
     "    "
    ]
   },
@@ -470,7 +476,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(musiteDeep_prediction_all_file_path, sep='\\t')\n",
+    "data = pd.read_csv(musiteDeep_prediction_all_zip_file_path, sep='\\t')\n",
     "\n",
     "scores = data.groupby(by='protein_id').max()\n",
     "\n",
@@ -513,7 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "score_by_protein = pd.read_csv(musiteDeep_prediction_score_by_protein_file_path, sep='\\t')\n",
+    "score_by_protein = pd.read_csv(musiteDeep_prediction_score_by_protein_zip_file_path, sep='\\t')\n",
     "\n",
     "print(score_by_protein.shape)\n",
     "\n",
@@ -605,74 +611,272 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "score_by_id_base.reset_index(inplace = True)\n",
+    "score_by_id_base.columns = ['protein_id_base','min_score','max_score', 'mean_score']\n",
     "score_by_id_base"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cuantos de los ids de arabidopsisi tienen predicho??\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "musiteDeep_prediction_all_file_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predictions"
+    "Checking all ids are valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all([x in all_arabidopsisis_codes for x in score_by_id_base.protein_id_base])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#score_by_id_base.to_csv(musiteDeep_prediction_score_by_id_base_file_path, sep= \"\\t\", index = False, header = True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The value to be analyzed is post-translational modification (PTM) score"
+    "## Join MusiteDeep scores by base id - Experimental data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "musite_scores_file_path = musiteDeep_prediction_score_by_id_base_file_path.replace(\".txt\", \".zip\")\n",
+    "musite_scores_data = pd.read_csv(musite_scores_file_path, sep = \"\\t\")\n",
+    "musite_scores_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experimental_file_path = path.join(base_path, \"data/preproc/experimental_ids.zip\")\n",
+    "experimental_data = pd.read_csv(experimental_file_path, sep = \"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "musite_scores_data.index = musite_scores_data.protein_id_base\n",
+    "experimental_data.index = experimental_data.code\n",
+    "musite_experimental_data = musite_scores_data.join(experimental_data, how = \"outer\")\n",
+    "#musite_experimental_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "musite_experimental_data[\"label\"] = [1 if x is not np.NaN else 0 for x in musite_experimental_data.code.values]\n",
+    "musite_experimental_data[\"color\"] = [\"orange\" if x == 1 else \"blue\" for x in musite_experimental_data.label.values]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "musite_experimental_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_threshold = 0.852 # from notebook roc.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "musite_experimental_data['prediction'] = 0\n",
+    "mask = musite_experimental_data.max_score >= score_threshold\n",
+    "musite_experimental_data.loc[mask, 'prediction'] = 1\n",
+    "columns = ['protein_id_base', 'max_score', 'prediction']\n",
+    "musite_prediction = musite_experimental_data[columns]\n",
+    "musite_prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "musite_prediction_file_path = path.join(base_path, \"data/results/musitedeep/musiteDeep_prediction_thr.txt\")\n",
+    "musite_prediction.to_csv(musite_prediction_file_path, sep=\"\\t\", index = None, header = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(musite_prediction.protein_id_base.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(all_arabidopsisis_codes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 7 (27655 - 27648) ids not scored by musiteDeep"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PredOr: phosphat + musiteDeep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "musite_prediction_file_path = path.join(base_path, \"data/results/musitedeep/musiteDeep_prediction_thr.zip\")\n",
+    "musite_prediction = pd.read_csv(musite_prediction_file_path, sep=\"\\t\")\n",
+    "musite_prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phosphat_pred_file_path = path.join(base_path, \"data/preproc/phosphat_prediction_2020.zip\")\n",
+    "phosphat_pred =  pd.read_csv(phosphat_pred_file_path, sep=\"\\t\")\n",
+    "phosphat_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "musite_prediction_mask = musite_prediction.prediction == 1\n",
+    "prediction = musite_prediction.loc[musite_prediction_mask, 'protein_id_base'].values\n",
+    "predOr = np.concatenate([prediction, phosphat_pred.code.values])\n",
+    "result = pd.DataFrame(np.unique(predOr), columns = ['code'])\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# revisar:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "predOr_phosphat_musiteDeep.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original = pd.read_csv('/media/paulati/Nuevo vol/paula/ingebi/2020/agustina_mazzella/data/predOr_phosphat_musiteDeep.csv')\n",
+    "original"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_valids = [x for x in original.code.values if x in all_arabidopsisis_codes]\n",
+    "len(original_valids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len([x for x in original_valids if x not in result.code.values])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "17156 - 16912"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(experimental_data.code.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "union = np.concatenate([result.code.values, experimental_data.code.values])\n",
+    "union_unique = np.unique(union)\n",
+    "len(union_unique)"
    ]
   }
  ],
