--- a/preparation/2_experimental.ipynb
+++ b/preparation/2_experimental.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_arabidopsisis_file_path = path.join(base_path, \"data/preproc/all_ids.txt\")\n",
+    "all_arabidopsisis_file_path = path.join(base_path, \"data/preproc/all_ids.zip\")\n",
     "all_arabidopsisis = pd.read_csv(all_arabidopsisis_file_path, header = None)\n",
     "print(all_arabidopsisis.shape)\n",
     "all_arabidopsisis_codes = all_arabidopsisis.iloc[:, 0].unique()\n",
@@ -274,7 +274,7 @@
    "source": [
     "result = pd.DataFrame(valid_exp_ids, columns = ['code'])\n",
     "phosphat_result_2020_file_path = path.join(base_path, 'data/preproc/phosphat_experimental_2020.csv')\n",
-    "result.to_csv(phosphat_result_2020_file_path, index = False)"
+    "#result.to_csv(phosphat_result_2020_file_path, index = False)"
    ]
   },
   {
@@ -387,7 +387,7 @@
    "outputs": [],
    "source": [
     "result = pd.DataFrame(p3db_tair_ids_valid_unique, columns = ['code'])\n",
-    "result.to_csv(out_file_path, sep='\\t', index = False)"
+    "#result.to_csv(out_file_path, sep='\\t', index = False)"
    ]
   },
   {
@@ -435,7 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vanWijk_experimental_genes_valid = [x for x in vanWijk_experimental_data_phospho.gene if x in all_arabidopsisis_codes]\n",
+    "vanWijk_experimental_genes_valid = [x for x in vanWijk_experimental_data.gene if x in all_arabidopsisis_codes]\n",
     "print(len(vanWijk_experimental_genes_valid))\n",
     "all([x in all_arabidopsisis_codes for x in vanWijk_experimental_genes_valid])"
    ]
@@ -457,7 +457,7 @@
    "outputs": [],
    "source": [
     "vanWijk_experimental_data_out_file_path = path.join(base_path, 'data/preproc/vanWijk_experimental.csv')\n",
-    "vanWijk_experimental_data_phospho.to_csv(vanWijk_experimental_data_out_file_path, sep = '\\t', index = False)"
+    "#vanWijk_experimental_data_phospho.to_csv(vanWijk_experimental_data_out_file_path, sep = '\\t', index = False)"
    ]
   },
   {
@@ -553,7 +553,7 @@
    "outputs": [],
    "source": [
     "data_baes_path = path.join(base_path, 'data/preproc')\n",
-    "phosphat_data_file_name = \"phosphat_experimental_2020.csv.zip\"\n",
+    "phosphat_data_file_name = \"phosphat_experimental_2020.zip\"\n",
     "p3db_data_file_name = \"p3db-3.5_experimental.zip\"\n",
     "vanWijk_data_file_name = \"vanWijk_experimental.zip\"\n",
     "mergner_data_file_name = \"mergner_experimental.zip\"\n"
@@ -609,7 +609,7 @@
    "outputs": [],
    "source": [
     "result = pd.DataFrame(all_data, columns = ['code'])\n",
-    "result.to_csv(result_file_path, sep='\\t', index = False)"
+    "#result.to_csv(result_file_path, sep='\\t', index = False)"
    ]
   },
   {
@@ -627,246 +627,6 @@
     "\n",
     "experimental total: 13137"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# BORRAR: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "musite_phosphat_data_concordance.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phospho_codes_experimental.index = phospho_codes_experimental.code\n",
-    "mergner_experimental_data_phospho.index = mergner_experimental_data_phospho['AGI code_Araport11']\n",
-    "vanWijk_experimental_data_phospho.index = vanWijk_experimental_data_phospho.gene\n",
-    "musite_phosphat_data_concordance.index = musite_phosphat_data_concordance.accession_unified"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prediction_experimental = phospho_codes_experimental.join(musite_phosphat_data_concordance, how=\"inner\")\n",
-    "prediction_experimental.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(8023 - 7149) / 8023"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "el 10% que dieron fosforilados experimentalmente, no estan en la prediccion\n",
-    "\n",
-    "no estan porque dieron discordantes?\n",
-    "\n",
-    "no fueron predichos por musite?\n",
-    "\n",
-    "comparar que universo es esto en arabidopsis total"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Intersecciones"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "experimental vs p3db"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(p3db_data.code)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "int_exp_p3db = [x for x in p3db_data.code.values if x in result.code.values]\n",
-    "len(int_exp_p3db)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(mergner_data.code.unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "int_exp_mergner = [x for x in mergner_data.code.values if x in result.code.values]\n",
-    "len(int_exp_mergner)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(vanWijk_data_clean.code.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "int_exp_vanWijk = [x for x in vanWijk_data_clean.code.values if x in result.code.values]\n",
-    "len(int_exp_vanWijk)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result.code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
