--- a/preparation/3_predictions.ipynb
+++ b/preparation/3_predictions.ipynb
@@ -364,7 +364,27 @@
    "outputs": [],
    "source": [
     "musiteDeep_prediction_files_count = 7\n",
-    "musite_results_base_path = path.join(base_path, 'data/results/musitedeep')\n",
+    "musite_results_base_path = path.join(base_path, 'data/results_preproc/musitedeep')\n",
+    "musiteDeep_prediction_file_path = path.join(musite_results_base_path, 'file{}_Prediction_results.txt')\n",
+    "musiteDeep_prediction_all_file_path = path.join(musite_results_base_path, \"Prediction_results_all.txt\")\n",
+    "musiteDeep_prediction_all_scores_file_path = path.join(musite_results_base_path, \"Prediction_results_all_scores.txt\")\n",
+    "musiteDeep_prediction_score_by_protein_file_path = path.join(musite_results_base_path, \"Prediction_results_score_by_protein.txt\")\n",
+    "musiteDeep_prediction_score_by_id_base_file_path = path.join(musite_results_base_path, \"Prediction_results_score_by_id_base.txt\")\n",
+    "\n",
+    "musiteDeep_prediction_all_zip_file_path = musiteDeep_prediction_all_file_path.replace(\".txt\", \".zip\")\n",
+    "musiteDeep_prediction_all_scores_zip_file_path = musiteDeep_prediction_all_scores_file_path.replace(\".txt\", \".zip\")\n",
+    "musiteDeep_prediction_score_by_protein_zip_file_path = musiteDeep_prediction_score_by_protein_file_path.replace(\".txt\", \".zip\")\n",
+    "musiteDeep_prediction_score_by_id_base_zip_file_path = musiteDeep_prediction_score_by_id_base_file_path.replace(\".txt\", \".zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "musiteDeep_prediction_files_count = 7\n",
+    "musite_results_base_path = path.join(base_path, 'data/results_preproc/musitedeep')\n",
     "musiteDeep_prediction_file_path = path.join(musite_results_base_path, 'file{}_Prediction_results.txt')\n",
     "musiteDeep_prediction_all_file_path = path.join(musite_results_base_path, \"Prediction_results_all.txt\")\n",
     "musiteDeep_prediction_all_scores_file_path = path.join(musite_results_base_path, \"Prediction_results_all_scores.txt\")\n",
@@ -616,7 +636,7 @@
     "\n",
     "protein_score_df.fillna(-1, inplace = True)\n",
     "\n",
-    "# protein_score_df.to_csv(musiteDeep_prediction_all_scores_file_path, sep = '\\t', index = None)\n"
+    "#protein_score_df.to_csv(musiteDeep_prediction_all_scores_file_path, sep = '\\t', index = None)\n"
    ]
   },
   {
@@ -851,7 +871,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "musite_prediction_file_path = path.join(base_path, \"data/results/musitedeep/musiteDeep_prediction_thr.txt\")\n",
+    "musite_prediction_file_path = path.join(base_path, \"data/results_preproc/musitedeep/musiteDeep_prediction_thr.txt\")\n",
     "#musite_prediction.to_csv(musite_prediction_file_path, sep=\"\\t\", index = None, header = True)"
    ]
   },
@@ -930,41 +950,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## PredOr: phosphat + musiteDeep"
    ]
@@ -975,7 +960,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "musite_prediction_file_path = path.join(base_path, \"data/results/musitedeep/musiteDeep_prediction_thr.zip\")\n",
+    "musite_prediction_file_path = path.join(base_path, \"data/results_preproc/musitedeep/musiteDeep_prediction_thr.zip\")\n",
     "musite_prediction = pd.read_csv(musite_prediction_file_path, sep=\"\\t\")\n",
     "musite_prediction"
    ]
@@ -1030,7 +1015,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predOr_file_path_out = path.join(base_path, \"data/results/predOr_phosphat_musiteDeep.csv\")\n",
+    "predOr_file_path_out = path.join(base_path, \"data/results_preproc/predOr_phosphat_musiteDeep.csv\")\n",
     "#predOr_result.to_csv(predOr_file_path_out, index = None)"
    ]
   },
@@ -1100,8 +1085,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#predOr_file_path = path.join(base_path, \"data/results/predOr_phosphat_musiteDeep.zip\")\n",
-    "predOr_file_path = path.join(base_path, \"data/results/PredRS.zip\")\n",
+    "#predOr_file_path = path.join(base_path, \"data/results_preproc/predOr_phosphat_musiteDeep.zip\")\n",
+    "predOr_file_path = path.join(base_path, \"data/results_preproc/PredRS.zip\")\n",
     "predOr_data = pd.read_csv(predOr_file_path)\n",
     "predOr_data.index = predOr_data.code\n",
     "predOr_data"
@@ -1499,6 +1484,13 @@
     "score_min_1113 = min(scores)\n",
     "print(score_min_1113)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
