--- a/preparation/4_union.ipynb
+++ b/preparation/4_union.ipynb
@@ -75,8 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#predOr_file_path = path.join(base_path, \"data/results/predOr_phosphat_musiteDeep.zip\")\n",
-    "predOr_file_path = path.join(base_path, \"data/results/PredRS.zip\")\n",
+    "#predOr_file_path = path.join(base_path, \"data/results_preproc/predOr_phosphat_musiteDeep.zip\")\n",
+    "predOr_file_path = path.join(base_path, \"data/results_preproc/PredRS.zip\")\n",
     "predOr_data = pd.read_csv(predOr_file_path)\n"
    ]
   },
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "#experimental_file_path = path.join(base_path, \"data/preproc/experimental_ids.zip\")\n",
-    "experimental_file_path = path.join(base_path, \"data/results/ExpRS.zip\")\n",
+    "experimental_file_path = path.join(base_path, \"data/results_preproc/ExpRS.zip\")\n",
     "experimental_data = pd.read_csv(experimental_file_path, sep = \"\\t\")\n"
    ]
   },
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "union_data_file_path = path.join(base_path, \"data/results/union_experimental_predOr_phosphat_musiteDeep_ids.csv\")\n",
+    "union_data_file_path = path.join(base_path, \"data/results_preproc/union_experimental_predOr_phosphat_musiteDeep_ids.csv\")\n",
     "#union_data.to_csv(union_data_file_path, index = None)"
    ]
   },
