--- a/preparation/roc_musiteDeep.ipynb
+++ b/preparation/roc_musiteDeep.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "musite_results_base_path = path.join(base_path, 'data/results/musitedeep')\n",
+    "musite_results_base_path = path.join(base_path, 'data/results_preproc/musitedeep')\n",
     "musiteDeep_prediction_score_by_id_base_file_path = path.join(musite_results_base_path, \"Prediction_results_score_by_id_base.txt\")"
    ]
   },
